--- a/Main/CMakeLists.txt
+++ b/Main/CMakeLists.txt
@@ -1,11 +1,3 @@
 cmake_minimum_required(VERSION 3.9.5)
-project(got)
-add_executable(arvore.o)
-add_executable(escolha.o)
-add_executable(batalha.o)
-add_executable(fila.o)
-add_executable(lista.o)
-add_executable(tela_inicial.o)
-add_executable(game.o)
-add_executable(lertxt.o)
-add_executable(main.o)
+project(got C)
+add_executable(got arvore.c escolha.c batalha.c fila.c lista.c tela_inicial.c game.c lertxt.c main.c)
